# melia

./: Cargo.toml  README.md  flake.nix  justfile  nixos-module.nix
src/: cli.rs  config.rs  ctl.rs  daemon.rs  io.rs  main.rs
src/config/: consts.rs  toml_config.rs
src/daemon/: service.rs
