[package]
name = "melia"
version = "0.1.0"
authors = ["Ash Walker <ash@ashwalker.net>"]
edition = "2021"

description = "A web server designed for ashwalker.net"
readme = true
repository = "https://github.com/SignalWalker/melia"
license = "AGPL-3.0"

[dependencies]
futures = { version = "^0.3" }
tokio = { version = "^1", features = [
  "full",
  "rt-multi-thread",
  "parking_lot",
] }
tokio-stream = { version = "^0.1", features = ["net"] }
tokio-util = { version = "^0.7", features = ["net", "codec"] }

http-body = "^1"
http-body-util = { version = "^0.1" }
hyper = { version = "^1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "^0.1", features = ["tokio", "server-auto"] }

tower = { version = "^0.5", features = ["full"] }
tower-http = { version = "^0.6", features = ["full"] }

crossbeam = "^0.8"
parking_lot = "^0.12"

# axum = { git = "https://github.com/tokio-rs/axum", branch = "david/hyper-1.0-rc.x", features = [ "http1", "http2", "macros" ] }

bytes = "^1"

clap = { version = "^4.0", features = ["derive", "env"] }

url = { version = "^2", features = ["serde"] }

thiserror = "^2"
tracing = { version = "^0.1", features = [] }
tracing-subscriber = { version = "^0.3", features = [
  "time",
  "env-filter",
  "parking_lot",
  "local-time",
  "json",
] }

time = { version = "^0.3", features = ["formatting", "local-offset", "macros"] }

lazy_static = "^1"

# for finding XDG directories
directories = "^5"

# serialization/deserialization
serde = { version = "^1" }
serde_derive = "^1"
## configuration
toml = "^0.8"
## json
serde_json = "^1"

# systemd
systemd = { optional = true, version = "^0.10" }
libsystemd = { optional = true, version = "^0.7" }
libc = { optional = true, version = "^0.2" }

# [patch.crates-io]
# hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }
# http-body = { git = "https://github.com/hyperium/http-body", branch = "master" }
# http-body-util = { git = "https://github.com/hyperium/http-body", branch = "master" }

[features]
default = ["systemd"]
systemd = ["dep:libsystemd", "dep:systemd", "dep:libc"]
